fixed Windows-based bugs, added better scrollbar than default

--- a/src/styles/color-dark.sass
+++ b/src/styles/color-dark.sass
@@ -55,3 +55,11 @@ body.dark-mode
 
     a
       color: $text-color
+
+  select
+    option
+      background-color: $background-fallback
+
+  &::-webkit-scrollbar-thumb,
+  *::-webkit-scrollbar-thumb
+    background-color: $input-focus
