--- a/src/styles/color-light.sass
+++ b/src/styles/color-light.sass
@@ -51,3 +51,11 @@ body.light-mode
 
     a
       color: $text-color
+
+  select
+    option
+      background-color: $background-fallback
+
+  &::-webkit-scrollbar-thumb,
+  *::-webkit-scrollbar-thumb
+    background-color: $input-focus
