--- a/src/styles/color-transitions.sass
+++ b/src/styles/color-transitions.sass
@@ -31,3 +31,6 @@ div.module
 
   a
     transition: time(color)
+
+  *::-webkit-scrollbar-thumb
+    transition: time(background-color)
